Commit after presentation

--- a/PennState/Views/Account/AddUser.cshtml
+++ b/PennState/Views/Account/AddUser.cshtml
@@ -1,4 +1,5 @@
-﻿@model PennState.ViewModels.AddUserViewModel
+﻿
+@model PennState.ViewModels.AddUserViewModel
 @{
     ViewBag.Title = "AddUser";
 }
