--- a/PennState/Views/Account/Index.cshtml
+++ b/PennState/Views/Account/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model PennStateLabInventory.ViewModels.AddUserViewModel
+﻿
+@model PennStateLabInventory.ViewModels.AddUserViewModel
 
 @{
     ViewBag.Title = "Index";
