--- a/PennState/Views/Account/Login.cshtml
+++ b/PennState/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model PennState.Models.LoginView
+﻿
+@model PennState.Models.LoginView
 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @onsubmit="return valLogIn()", @id="logInForm"}))
 {
     @Html.AntiForgeryToken()
