--- a/PennState/Views/Shared/_Layout.cshtml
+++ b/PennState/Views/Shared/_Layout.cshtml
@@ -46,6 +46,10 @@
         return false;
     }
 
+    var closeAdd = function(){
+        window.location = '/Home/Index';
+    }
+
     //Search for query string
     $(document).ready(function () {
         $('#my_form').on('keydown', function (e) {
