--- a/PennState/Views/Shared/_NavBar.cshtml
+++ b/PennState/Views/Shared/_NavBar.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="container-pos">
+﻿
+<div class="container-pos">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary overlap">
         @Html.ActionLink("Physics Lab Inventory", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         <button class="navbar-toggler" aria-expanded="false" aria-controls="navbarColor01" aria-label="Toggle navigation" type="button" data-target="#navbarColor01" data-toggle="collapse">
